--- a/app/assets/stylesheets/04-sign-in-up.scss
+++ b/app/assets/stylesheets/04-sign-in-up.scss
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 18%;
+    // height: 18%;
     background-color: black;
     width: 400px;
     color: white;
@@ -43,6 +43,7 @@
     font-weight: bold;
     text-align: center;
     padding-top: 4%;
+    padding-bottom: 5%;
     // padding-left: 4%;
     // padding-right: 4%;
     opacity: 1;
